# talks

./: .gitmodules  README.md
arch-conf-2020/: README.md  description.md  index.html
arch-conf-2020/css/: style.css
arch-summit-2024/: talk.md
europython-2018/: .gitignore  index.html  styles.css
europython-2018-lt/: cli-tools.txt  talk.txt
europython-2018/code/multithreading/: Cargo.toml  Makefile  run.py
europython-2018/code/multithreading/src/: calc.rs  lib.rs  rng.rs
europython-2018/code/python-in-rust/: Cargo.toml
europython-2018/code/python-in-rust/src/: main.rs
europython-2018/code/python-module-in-rust/: Cargo.toml
europython-2018/code/rust-multithreading/: Cargo.toml
europython-2018/code/simple_bind/: Cargo.toml  Makefile  run.py
europython-2018/code/simple_bind/src/: lib.rs
europython-2018/code/simple_example/: Cargo.toml  Makefile  python_only.py  setup.py  with_cython.pyx  with_rust.py
europython-2018/code/simple_example/src/: calc.rs  lib.rs
europython-2018/code/structs_as_classes/: Cargo.toml  Makefile  run.py
europython-2018/code/structs_as_classes/src/: lib.rs  our_class.rs
europython-2018/code/what-rust-looks-like/src/: main.rs
europython-2018/code/what_rust_looks_like/: Cargo.toml  main.py
europython-2018/code/what_rust_looks_like/src/: main.rs
europython-2019/: README.md  notes.md  talk.md
